@@ -1,2 +1,11 @@
-.build
-CPAN-Changes-Group-Dependencies-Details-*
+/.build
+/CPAN-Changes-Group-Dependencies-Details-*
+/tmp/
+/MYMETA.json
+/MYMETA.yml
+/META.json
+/META.yml
+/Makefile
+/Makefile.old
+/blib/
+/pm_to_blib
