@@ -1,0 +1,80 @@
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.037.
+use strict;
+use warnings;
+
+use 5.006;
+
+use ExtUtils::MakeMaker;
+
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "Full details of dependency changes.",
+  "AUTHOR" => "Kent Fredric <kentnl\@cpan.org>",
+  "CONFIGURE_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0
+  },
+  "DISTNAME" => "CPAN-Changes-Group-Dependencies-Details",
+  "EXE_FILES" => [],
+  "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.006",
+  "NAME" => "CPAN::Changes::Group::Dependencies::Details",
+  "PREREQ_PM" => {
+    "CPAN::Changes" => "0.30",
+    "CPAN::Changes::Group" => 0,
+    "CPAN::Meta::Prereqs::Diff" => 0,
+    "Carp" => 0,
+    "Moo" => 0,
+    "MooX::Lsub" => 0,
+    "charnames" => 0,
+    "constant" => 0,
+    "strict" => 0,
+    "warnings" => 0
+  },
+  "TEST_REQUIRES" => {
+    "CPAN::Changes::Release" => 0,
+    "CPAN::Meta::Prereqs" => 0,
+    "ExtUtils::MakeMaker" => 0,
+    "File::Spec" => 0,
+    "Scalar::Util" => 0,
+    "Test::Differences" => 0,
+    "Test::More" => "0.89",
+    "if" => 0
+  },
+  "VERSION" => "0.001005",
+  "test" => {
+    "TESTS" => "t/*.t t/00-compile/*.t"
+  }
+);
+
+
+my %FallbackPrereqs = (
+  "CPAN::Changes" => "0.30",
+  "CPAN::Changes::Group" => 0,
+  "CPAN::Changes::Release" => 0,
+  "CPAN::Meta::Prereqs" => 0,
+  "CPAN::Meta::Prereqs::Diff" => 0,
+  "Carp" => 0,
+  "ExtUtils::MakeMaker" => 0,
+  "File::Spec" => 0,
+  "Moo" => 0,
+  "MooX::Lsub" => 0,
+  "Scalar::Util" => 0,
+  "Test::Differences" => 0,
+  "Test::More" => "0.89",
+  "charnames" => 0,
+  "constant" => 0,
+  "if" => 0,
+  "strict" => 0,
+  "warnings" => 0
+);
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+  delete $WriteMakefileArgs{TEST_REQUIRES};
+  delete $WriteMakefileArgs{BUILD_REQUIRES};
+  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
+}
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
