@@ -34,22 +34,31 @@ order_by = name
 exclude_filename = README
 exclude_filename = README.mkdn
 exclude_filename = README.pod
+exclude_filename = CONTRIBUTING.pod
 exclude_filename = LICENSE
+exclude_filename = Makefile.PL
 include_dotfiles = 1
 
 [License / @Author::KENTNL/License]
 
 [MetaJSON / @Author::KENTNL/MetaJSON]
 
-[MetaYAML / @Author::KENTNL/MetaYAML]
+[MetaYAML::Minimal / @Author::KENTNL/MetaYAML::Minimal]
 
 [Manifest / @Author::KENTNL/Manifest]
 
 [Author::KENTNL::TravisCI / @Author::KENTNL/Author::KENTNL::TravisCI]
 :version = 0.001002
 
+[Author::KENTNL::CONTRIBUTING / @Author::KENTNL/Author::KENTNL::CONTRIBUTING]
+-location = root
+-phase = build
+:version = 0.001003
+document_version = 0.1
+
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
+copy = Makefile.PL
 
 [MetaTests / @Author::KENTNL/MetaTests]
 
@@ -85,7 +94,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.024001
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.025001
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -129,6 +138,7 @@ tag_format = %v-source
 
 [Git::NextRelease / @Author::KENTNL/Git::NextRelease]
 :version = 0.004000
+default_branch = master
 format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ %h
 time_zone = UTC
 
@@ -169,11 +179,14 @@ applyto_phase = develop
 modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
 
+[RemovePrereqs::Provided / @Author::KENTNL/RemovePrereqs::Provided]
+
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
 ; twitter_extra_hash_tags =
 ; auto_prereqs_skip = File::Find
 -phase = develop
 -relationship = requires
+Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING = 0.001003
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.004002
 Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
@@ -198,7 +211,7 @@ Dist::Zilla::Plugin::MetaData::BuiltWith = 1.004000
 Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
-Dist::Zilla::Plugin::MetaYAML = 0
+Dist::Zilla::Plugin::MetaYAML::Minimal = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
 Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
@@ -209,6 +222,7 @@ Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::Prereqs::Upgrade = 0
 Dist::Zilla::Plugin::Readme::Brief = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
+Dist::Zilla::Plugin::RemovePrereqs::Provided = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
